# gllm-kernels

./: .gitignore  BUG-KNOWLEDGE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IR-SIDE-EFFECT-OP-INVARIANT.md  LICENSE  Makefile  PERFORMANCE_REPORT.md  README.md  WORKFLOW_TRIGGER_REPORT.md  bench_mkl.c  bench_mkl.py  bench_mkl_mt  cbindgen.toml  rust_out.s  transform_loops.py
.serena/: project.yml
SPEC/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  03-DATA-STRUCTURE.md  04-GPU-BACKEND.md  05-LAYER2-INFERENCE.md  AUDIT-GAPS.md  PLAN-gpu-codegen-unify.md  PLAN-phase4-maturity.md  PLAN-quality-hardening.md  PLAN-symexec-controlflow.md
benches/: attention_bench.rs  baseline.json  baseline_audit.rs  bench_elementwise.rs  bench_fusion.rs  bench_gemm.rs  bench_quant.rs  gemm_benchmark.rs  jit_compile_benchmark.rs  jit_vs_asm.rs  kernels_benchmark.rs  symexec_benchmark.rs  utils.rs
build-scripts/: build-cuda.sh  build-metal.sh  build-rocm.sh  build-spirv.sh  package-fatbin.sh
docker/: Dockerfile.cuda  Dockerfile.rocm
docs/: COMPILATION.md  PERFORMANCE_OPTIMIZATIONS.md
examples/: ab_bench.rs  bench_attention.rs  bench_gpu.rs  bench_simd.rs  perf_compare.rs  perf_regression.rs  perf_report.rs  profile_kernels.rs  quick_bench.rs  test_backend_detection.rs  test_cuda_detection.rs  test_fusion_mode.rs  test_gemm_dap.rs.legacy  test_gemm_dump.rs  test_identity_gemm.rs  test_rerank_gpu.rs  test_rerank_perf.rs  test_sm_aware.rs  test_wgpu_detection.rs
scalar-ops/: Cargo.toml
scripts/: compile-kernels.sh  compile_all_kernels.sh  compile_cuda_kernels.sh  compile_hip_kernels.sh  compile_kernels.sh  compile_metal_kernels.sh  download_metal_kernels.sh
src/: backend.rs  backend_core.rs  backend_core_attention.rs  backend_core_moe.rs  backend_core_sampling.rs  backend_match.rs  backend_selector.rs  backend_trait.rs  cache_params.rs  check_isa.rs  codebooks.rs  cpu_backend.rs  cuda_backend.rs  device.rs  embedded_kernels.rs  gpu_types.rs  kernel_cache.rs  kernel_dispatcher.rs  kernel_downloader.rs  kernel_types.rs  lib.rs  metal_backend.rs  microarch.rs  numa.rs  quant.rs  quant_format.rs  quant_mxfp4.rs  (+14 more)
(+633 files in other folders)
