[package]
name = "gllm-kernels"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.11.2", features = ["cuda-version-from-build-system"] }
half = "2.3.1"
paste = "1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "gemm_benchmark"
harness = false

[[bench]]
name = "kernels_benchmark"
harness = false
