[package]
name = "gllm-kernels"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2.3.1"
paste = "1"
rayon = "1.10"
libc = "0.2"
seq-macro = "0.3"
iced-x86 = { version = "1.21", features = ["code_asm"], optional = true }

[features]
default = ["jit-x86"]
jit-x86 = ["iced-x86"]
jit-aarch64 = []

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "gemm_benchmark"
harness = false

[[bench]]
name = "kernels_benchmark"
harness = false

[[bench]]
name = "baseline_audit"
harness = false
